--- a/index.html
+++ b/index.html
@@ -3,7 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- HTML Meta Tags -->
     <title>O Cara Mais Sortudo do Mundo</title>
+    <meta
+      name="description"
+      content="Essa é uma dedicatória a mulher mais foda do mundo."
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://gabrielli.caiodetz.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="O Cara Mais Sortudo do Mundo" />
+    <meta
+      property="og:description"
+      content="Essa é uma dedicatória a mulher mais foda do mundo."
+    />
+    <meta
+      property="og:image"
+      content="https://gabrielli.caiodetz.com/img/banner.webp"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="gabrielli.caiodetz.com" />
+    <meta property="twitter:url" content="https://gabrielli.caiodetz.com" />
+    <meta name="twitter:title" content="O Cara Mais Sortudo do Mundo" />
+    <meta
+      name="twitter:description"
+      content="Essa é uma dedicatória a mulher mais foda do mundo."
+    />
+    <meta
+      name="twitter:image"
+      content="https://gabrielli.caiodetz.com/img/banner.webp"
+    />
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
