--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
     />
 
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="https://gabrielli.caiodetz.com"
+      type="image/webp"
+    />
   </head>
   <body>
     <div class="capa">
