--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         isso mas uma coisa eu tenho certeza eu vou ensinar meu filho a valorizar
         a mulher dele como se a vida dele dependesse disso porque realmente
         depende é com a sua mulher que você se encontra você se contempla é com
-        ela que você sobrevive e isso para min é a coisa mais maravilhosa da
+        ela que você sobrevive e isso para mim é a coisa mais maravilhosa da
         vida.
       </p>
       <p>
